# open-crypto-foundation

./: .env.example  README.md  next.config.js  package-lock.json  package.json  site.html  tailwind.config.js  tsconfig.json
components/: AlternativePaths.tsx  AnnouncementBanner.tsx  BlueBannerRemover.tsx  ContractScanner.tsx  CookiesBanner.tsx  Disclaimer.tsx  ErrorBoundary.tsx  Features.tsx  Footer.tsx  HarmReduction.tsx  Hero.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  Navigation.tsx  NewsletterSubscribe.tsx  PresaleBanner.tsx  PresalePurchaseForm.tsx  PriceHikeCountdown.tsx  RemovePresaleBanner.tsx  Resources.tsx  SafetyTools.tsx  ScrollToTop.tsx  SearchBar.tsx  SkullLogo.tsx  SolanaTokenClaim.tsx  SolanaWalletProvider.tsx  TabLayout.tsx  TokenAnalyzer.tsx  TokenClaimForm.tsx  TradingViewChart.tsx  TradingViewTickerTape.tsx  WalletConnectionComponents.tsx
context/: SolanaWalletProvider.tsx
contexts/: LanguageContext.tsx
hooks/: useClientSideOnly.ts
pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  about.tsx  audit.tsx  charts.js  charts.jsx  charts.tsx  claim.tsx  contact.tsx  cookies.tsx  dao.tsx  index.tsx  launch-project.tsx  manifesto.tsx  ocf-token.tsx  openexchange.tsx  openlabs.tsx  presale.tsx  privacy.tsx  report-scam.tsx  roadmap.tsx  scam-database.tsx  search.tsx  services.tsx  terms.tsx  token-presale.tsx  tokenomics.tsx  tools.tsx  verified-links.tsx  wallets-and-funds.tsx  whitepaper.tsx
public/: logo-skull.txt
scripts/: check-program.js  deploy-palm-presale.ts  (+2 more)
solana-program/: Anchor.toml  Cargo.toml  README.md
solana-program/src/: lib.rs
(+55 files in other folders)
